# RubiksCubeSolver

./: BFSsolver.h  CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  DFSsolver.h  GenericRubiksCube.cpp  GenericRubiksCube.h  IDAstarsolver.h  IDDFSsolver.h  Math.cpp  Math.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  RubiksCube1DArray.cpp  RubiksCube3Darray.cpp  RubiksCubeBitboard.cpp  main.cpp
